tests/pass/class/empty.tox
class Foo {}

fn main() {
    print(Foo{}); // expect:instance
}