tests/fail/call/nil.tox
fn main() {
    nil(); //error:  Not callable
}